--- a/App/templates/mainpage.html
+++ b/App/templates/mainpage.html
@@ -50,15 +50,14 @@
                     <p>"{{obj.descriptiveText}}"</p>
                     <p>Seller: {{obj.seller}}</p>
                     {% if obj.sellerAddress != None %}
-                        <button type="submit" name="makeAnOffer"><a href="{{obj.token_get_url}}" style="text-decoration:none">Make an offer in aUSD!</a></button>
+                        <button type="submit" name="makeAnOffer"><a href="{{obj.token_get_url}}" style="text-decoration:none">Make an offer in aUSD</a></button>
                     {%else%}
-                        <button type="submit" name="makeAnOffer"><a href="{{obj.get_url}}" style="text-decoration:none">Make an offer in USD!</a></button>
+                        <button type="submit" name="makeAnOffer"><a href="{{obj.get_url}}" style="text-decoration:none">Make an offer in USD</a></button>
                     {% endif %}
             </div>
 
       {% endfor %}
 </div>
-
 
 <!-- Footer -->
   <footer class="w3-row-padding w3-padding-32 w3-margin-top">
